[gd_scene load_steps=2 format=3 uid="uid://buc0d8r5gbn5o"]

[ext_resource type="Script" uid="uid://bl5hsqdycbk8x" path="res://scripts/buttom.gd" id="1_ns1l2"]

[node name="Buttom" type="CanvasLayer"]
script = ExtResource("1_ns1l2")

[node name="Right" type="Button" parent="."]
offset_left = 536.0
offset_top = 250.0
offset_right = 601.0
offset_bottom = 315.0
text = "→"

[node name="Left" type="Button" parent="."]
offset_left = 438.0
offset_top = 250.0
offset_right = 503.0
offset_bottom = 315.0
text = " ←"

[node name="Up2" type="Button" parent="."]
offset_left = 68.0
offset_top = 250.0
offset_right = 133.0
offset_bottom = 315.0
text = "↑"

[node name="Back" type="Button" parent="."]
offset_left = 558.0
offset_top = 4.0
offset_right = 636.0
offset_bottom = 38.0
text = "Exit
"

[node name="Restart" type="Button" parent="."]
offset_left = 477.0
offset_top = 4.0
offset_right = 555.0
offset_bottom = 38.0
text = "Respawn
"

[connection signal="button_down" from="Right" to="." method="_on_right_button_down"]
[connection signal="button_up" from="Right" to="." method="_on_right_button_up"]
[connection signal="button_down" from="Left" to="." method="_on_left_button_down"]
[connection signal="button_up" from="Left" to="." method="_on_left_button_up"]
[connection signal="button_down" from="Up2" to="." method="_on_up_2_button_down"]
[connection signal="button_up" from="Up2" to="." method="_on_up_2_button_up"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Restart" to="." method="_on_restart_pressed"]
